--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,80 +4,47 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/resetButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:backgroundTint="#FF9800"
-        android:text="RESET" />
-
-    <Button
-        android:id="@+id/saveButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/resetButton"
-        android:layout_centerHorizontal="true"
-        android:backgroundTint="#FF9800"
-        android:text="SAVE" />
-
-    <Button
-        android:id="@+id/loadButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/saveButton"
-        android:layout_centerHorizontal="true"
-        android:backgroundTint="#FF9800"
-        android:text="LOAD" />
-
-    <Button
-        android:id="@+id/circleButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/loadButton"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:backgroundTint="#FF9800"
-        android:text="Circle" />
-
-    <Button
-        android:id="@+id/squareButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/loadButton"
-        android:layout_marginTop="16dp"
-        android:layout_toEndOf="@id/circleButton"
-        android:backgroundTint="#FF9800"
-        android:text="Square" />
-
-    <Button
-        android:id="@+id/triangleButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/loadButton"
-        android:layout_marginTop="16dp"
-        android:layout_toEndOf="@id/squareButton"
-        android:backgroundTint="#FF9800"
-        android:text="Triangle" />
-
-    <Button
-        android:id="@+id/pointButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/loadButton"
-        android:layout_marginTop="16dp"
-        android:layout_toEndOf="@id/triangleButton"
-        android:backgroundTint="#FF9800"
-        android:text="Point" />
-
-    <cv.um.poo.design.DesignView
-        android:id="@+id/designView"
+    <com.poo.projecto.DrawingView
+        android:id="@+id/drawing_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/circleButton"
-        android:layout_marginTop="-208dp"
-        android:background="@color/white"
-        android:backgroundTint="@color/white" />
+        android:layout_height="match_parent" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/circle_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Círculo" />
+
+        <Button
+            android:id="@+id/rectangle_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Retângulo" />
+
+        <Button
+            android:id="@+id/triangle_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Triângulo" />
+
+        <Button
+            android:id="@+id/free_draw_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Traçado Livre" />
+
+        <Button
+            android:id="@+id/clear_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Limpar" />
+
+    </LinearLayout>
 
 </RelativeLayout>
