--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     <com.poo.projecto.DrawingView
         android:id="@+id/drawing_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:background="#69B3B6"
+        android:layout_height="680dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,36 +16,74 @@
         android:layout_alignParentBottom="true"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/circle_button"
-            android:layout_width="wrap_content"
+        <RadioGroup
+            android:id="@+id/radioGroup"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Círculo" />
+            android:layout_alignParentBottom="true"
+            android:background="#110D43"
+            android:gravity="center"
 
-        <Button
-            android:id="@+id/rectangle_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Retângulo" />
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/triangle_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Triângulo" />
+            <RadioButton
+                android:id="@+id/radioButtonLine"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:fontFamily="sans-serif-black"
+                android:text="Line"
+                android:textColor="@color/white" /> <!-- Set checked attribute to true -->
 
-        <Button
-            android:id="@+id/free_draw_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Traçado Livre" />
+            <RadioButton
+                android:id="@+id/radioButtonCircle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-black"
+                android:text="Circle"
+                android:textColor="@color/white" />
 
-        <Button
-            android:id="@+id/clear_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Limpar" />
+            <RadioButton
+                android:id="@+id/radioButtonRectangle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-black"
+                android:text="Rectangle"
+                android:textColor="@color/white" />
 
+            <RadioButton
+                android:id="@+id/radioButtonPixel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-black"
+                android:text="Pixel"
+                android:textColor="@color/white" />
+        </RadioGroup>
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+    <Button
+        android:id="@+id/clear_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reset" />
+
+    <Button
+        android:id="@+id/btn_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save" />
+
+    <Button
+        android:id="@+id/btn_load"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Load" />
     </LinearLayout>
 
 </RelativeLayout>
